# hplcToCsv

./: LICENSE  README.md  hplcToCsv.cabal
app/: Main.hs
src/: Controller.hs  Main.hs  Model.hs  Types.hs
tests/: BasicTests.hs
tests/files/: Beckman1.dat.asc  Beckman1.dat.csv
