name:                hplcToCsv
version:             0.1.2.0
-- synopsis:
-- description:
homepage:            https://github.com/MWRuszczycky/hplcToCsv#readme
license:             BSD3
license-file:        LICENSE
author:              Mark W. Ruszczycky
maintainer:          mwruszczycky@gmail.com
copyright:           2018 Mark W. Ruszczycky
category:            Utility
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hplcToCsv
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2
  other-modules:       Paths_hplcToCsv
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , mtl
