name:                   hplcToCsv
version:                1.3.0
-- synopsis:
-- description:
homepage:               https://github.com/MWRuszczycky/hplcToCsv#readme
license:                BSD3
license-file:           LICENSE
author:                 Mark W. Ruszczycky
maintainer:             mwruszczycky@gmail.com
copyright:              2018 Mark W. Ruszczycky
category:               Utility
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable hplcToCsv
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  ghc-options:          -O2
  build-depends:        base >= 4.7 && < 5
                      , hplcToCsv-internal

library hplcToCsv-internal
  exposed-modules:      Controller
                        Paths_hplcToCsv
                      , Model
                      , Types
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -O2
  build-depends:        base >= 4.7 && < 5
                      , directory
                      , mtl

test-suite basic
  type:                 exitcode-stdio-1.0
  main-is:              BasicTests.hs
  hs-source-dirs:       tests
  default-language:     Haskell2010
  build-depends:        base >=4.7 && <5
                      , directory
                      , hplcToCsv-internal
                      , hspec
                      , mtl
